@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.3 2004/10/10 15:58:03 jdolecek Exp $
+# $NetBSD: Makefile,v 1.4 2004/10/10 17:46:07 jdolecek Exp $
 
 PKGNAME=		postgresql73-client-${BASE_VERS}
-PKGREVISION=	1
+PKGREVISION=		# empty
 SVR4_PKGNAME=		pstgc
 COMMENT=		PostgreSQL database client programs
 
